--- a/query.css
+++ b/query.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 750px){
-
+  
   #summary{
     left: 10px;
     width: 90%;
@@ -10,14 +10,18 @@
   }  
 
   #headline h1{
+    
     font-size: 2.5em;
-    line-height: 1.5em;
+    line-height: 1.0em;
     margin-left: 40px;
     margin-top: 40px;
   }
 
   #headline img{
-      width: 200px;
+    max-width: 100%;
+    max-height: 100%;
+      /* width: 20px; */
+
   }
 
   #products-container{
@@ -67,20 +71,24 @@
   #headline{
       margin-top: 20px;
       margin-bottom: 85px;
-      width: 80%;
+      width: 100%;
       justify-content: space-evenly;
   }  
 
   #headline h1{
-    font-size: 2em;
-    line-height: 1.4em;
+    font-size: 10px;
+    line-height: 1.0em;
     margin-top: 60px;
-    margin-right: 60px;
+    /* margin-left: 70px; */
+    /* padding-right: 200px; */
     font-weight: normal;
   }
 
   #headline img{
-      width: 250px;
+    max-width: 100%;
+    max-height: 100%;
+      /* width: 250px; */
+      margin-left: 0px;
   }
 
   #products-container{
@@ -130,6 +138,9 @@
      margin-top: 5px;
      margin-bottom: 100px;
    } 
+   #headline img{
+     margin-right: -100px;
+   }
 
    #headline h1{
     margin-bottom: 20px;
@@ -205,16 +216,57 @@
      width: 80%;
      margin: 0 auto;
   }
+  #footer p{
+       margin-bottom: 30px;
+  }
 
 }
  
 @media screen and (max-width: 800px){
+
+  #first{
+    width: 95%;
+  }
+  #headline{
+    width: 100%;
+    margin-left: -50px;
+  }
   #headline img{
-    width: 10%;
+    width: 100%;
+    
+  }
+  #second h2{
+    width: 90%;
+  }
+  #products{
+    width: 90%;
+  }
+  
+}
+@media screen and (max-width: 1000px){
+  #first{
+    width:100%
+    
+  }
+  #second h2{
+    width:95%
+
+  }
+  #products{
+    width:90%
+
   }
 }
-
 @media screen and (max-width: 1100px){
+  /* #first{
+    width: 99%;
+  }
+  #second{
+    width: 99%;
+  }
+  #products{
+    width: 99%;
+  } */
   #headline{
     margin-bottom: 55px;
   }
@@ -251,7 +303,9 @@
   }
 }
 
+/* @media screen and (max-width: 1500px){
 
+} */
 /* @media (max-width:1680px) {
   
 
